--- a/views/indexView.phtml
+++ b/views/indexView.phtml
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Comienza a explorar</a>
+              <a class="nav-link" href="explorador.php">Comienza a explorar</a>
             </li>
           </ul>
         </div>
