--- a/views/exploradorView.phtml
+++ b/views/exploradorView.phtml
@@ -42,50 +42,30 @@
 
       <!-- Page Heading -->
       <h1 class="my-4">Descubre increibles viajes</h1>
-      <?php foreach ($datos as $row) {?>
-        <!-- Project One -->
-        <div class="row">
-          <div class="col-md-7">
-            <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="assets/img/<?php echo $row["foto"] ; ?>.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-5">
-            <h3><?php echo $row["nombre"] ; ?></h3>
-            <p><?php echo $row["descripcion"] ; ?></p>
-            <p class="destiny">Destino: <?php echo $row["destino"] ; ?></p>
-            <a class="btn btn-primary" href="historia.php?id=<?php echo $row["id"] ; ?>">Leer mas</a>
-          </div>
-        </div>
-        <hr>
-        <!-- /.row -->
-      <?php } ?>
-
+      <?php foreach ($datos as $row) {
+        echo historiasModel::getHistoriaExploradorHtml($row);
+       }?>
       <!-- Pagination -->
       <ul class="pagination justify-content-center">
         <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous">
+          <a class="page-link" href="explorador.php?pagina=<?php echo ($pagina == 0) ? $pagina : $pagina-1;?>" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
             <span class="sr-only">Previous</span>
           </a>
         </li>
+        <?php for ($i=0; $i < $countHistoriasPag ; $i++) {?>
+          <li class="page-item">
+            <a class="page-link" href="explorador.php?pagina=<?php echo $i;?>"><?php echo ($i+1);?></a>
+          </li>
+        <?php } ?>
         <li class="page-item">
-          <a class="page-link" href="explorador.php?pagina=0">1</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="explorador.php?pagina=3">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="explorador.php?pagina=6">3</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
+          <a class="page-link" href="explorador.php?pagina=<?php echo $pagina+1;?>" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
             <span class="sr-only">Next</span>
           </a>
         </li>
       </ul>
-
+      <?php $paginator; ?>
     </div>
     <!-- /.container -->
 
